--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "google-auth-library": "^6.0.2",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
     "sequelize": "^6.2.3"
